--- a/custom.scss
+++ b/custom.scss
@@ -16,8 +16,11 @@ body {
 .navbar{
 	    background: #000000;
 }
-.card-heander {
+.card-header {
 	background: #d4edda;
-	color:#155724;
+	color:#ffffff;
 	
+}
+.display-3 {
+	color: linear-gradient(90deg,#006b5b,#a2d157);
 }
